@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2009-02-22"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20090222
-#define RUBY_PATCHLEVEL 136
+#define RUBY_PATCHLEVEL 137
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
