@@ -1,3 +1,10 @@
+Sun Feb 22 21:43:34 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* numeric.c (ruby_float_step): extracted from num_step().
+
+	* range.c (range_step): uses ruby_float_step() for float range.
+	  [ruby-dev:37691]
+
 Sun Feb 22 00:49:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/extmk.rb (extmake): does not use both of makefile.rb and
